--- a/Home.html
+++ b/Home.html
@@ -77,7 +77,7 @@
                 <h4 class="u-text u-text-1"> À propos de moi<br>
                 </h4>
                 <p class="u-custom-item u-text u-text-2"> Je suis étudiant en première année. né en 16/12/2002 20 ans, Je suis un jeune homme très ambitieux à cause de mes pensées positives. J'aime essayer tout ce que je n'ai pas vu auparavant dans le but d'apprendre et d'expérimenter. Franchement, je ne suis pas fan des livres, mais au lieu de lire, j'aime appliquer la chose et travailler sur l'objectif par application. Mon passe-temps est l'informatique depuis Quand j'étais jeune, j'étais créatif. Quand j'étais enfant, j'étais un peintre habile.</p>
-                <a href="https://nicepage.com/k/parking-html-templates" class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1">view more</a>
+                <a href="https://www.linkedin.com/in/oussama-ramich-94435a208/" class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1">linkedin</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item">
