--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <meta name="keywords" content="Real Estate, agency, What Is a Real Estate Agent?, How to Search for a Home, We design People Inspired Experiences that create positive change in people&amp;apos;s lives., ​Home for sale, etudiant">
-    <meta name="description" content="Je suis étudiant en première année. né en 16/12/2002 20 ans, Je suis un jeune homme très ambitieux à cause de mes pensées positives. J'aime essayer tout ce que je n'ai pas vu auparavant dans le but d'apprendre et d'expérimenter. Franchement, je ne suis pas fan des livres, mais au lieu de lire, j'aime appliquer la chose et travailler sur l'objectif par application. Mon passe-temps est l'informatique depuis Quand j'étais jeune, j'étais créatif. Quand j'étais enfant, j'étais un peintre habile.">
+    <meta name="description" content="Je suis étudiant en première année. j'ai 20 ans, Je suis très ambitieux à Accusé de mes pensées positives. J'aime essayer tout ce que je n'ai pas vu auparavant dans le but d'apprendre et d'expérimenter. Mon objectif est de me spécialiser en Cybersécurité.">
     <title>Home - étudiant premier année chez Maroc Ynov campus </title>
     <link rel="icon" href="Myproject-11.png" />
     <link rel="stylesheet" href="nicepage.css" media="screen">
