--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <div alt="" class="u-image u-image-circle u-image-1" data-image-width="500" data-image-height="500" data-animation-name="zoomIn" data-animation-duration="2000" data-animation-direction=""></div>
                 <h4 class="u-text u-text-1"> À propos de moi<br>
                 </h4>
-                <p class="u-custom-item u-text u-text-2"> Je suis étudiant en première année. né en 16/12/2002 20 ans, Je suis un jeune homme très ambitieux à cause de mes pensées positives. J'aime essayer tout ce que je n'ai pas vu auparavant dans le but d'apprendre et d'expérimenter. Franchement, je ne suis pas fan des livres, mais au lieu de lire, j'aime appliquer la chose et travailler sur l'objectif par application. Mon passe-temps est l'informatique depuis Quand j'étais jeune, j'étais créatif. Quand j'étais enfant, j'étais un peintre habile.</p>
+                <p class="u-custom-item u-text u-text-2"> Je suis étudiant en première année. j'ai 20 ans, Je suis très ambitieux à Accusé de mes pensées positives. J'aime essayer tout ce que je n'ai pas vu auparavant dans le but d'apprendre et d'expérimenter. Mon objectif est de me spécialiser en Cybersécurité.</p>
                 <a href="https://www.linkedin.com/in/oussama-ramich-94435a208/" class="u-border-2 u-border-black u-btn u-button-style u-hover-black u-none u-text-black u-text-hover-white u-btn-1">linkedin</a>
               </div>
             </div>
